# Shared-Drive-Migrator

./: .gitignore  Features.md  README.md  accounts.csv  app.py  backend.py  cli.py  custom_logging.py  main.py  migrator.py  package-lock.json  pyproject.toml  requirements.txt  team_drive_migrator.py
.github/workflows/: build.yml
examples/: accounts.csv
src/: backend.py  icon.py  main.py
templates/: base.html  bulk-progress.html  index.html  migrate-bulk.html  migrate-user.html  modes.html  setup.html  show-err.html  user-drives.html
