[project]
name = "shared-drive-migrator"
version = "3.0.1a0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.4",
    "google-api-python-client>=2.188.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "nicegui>=3.6.1",
    "pywebview>=6.1",
]
[tool.ruff]
# The "Happy Medium" selection
select = [
    "E",   # pycodestyle errors (standard PEP8)
    "W",   # pycodestyle warnings
    "F",   # Pyflakes (catches the "non-existent method/variable" issues)
    "I",   # isort (keeps your imports organized)
    "B",   # flake8-bugbear (finds design flaws and likely bugs)
    "C4",  # flake8-comprehensions (better list/dict/set usage)
    "UP",  # pyupgrade (keeps your syntax modern, e.g., f-strings)
    "N",   # pep8-naming (prevents weird PascalCaseVariables)
    "SIM", # flake8-simplify (suggests simpler code paths)
    "T20", # flake8-print (reminds you to remove debug print statements)
    #"ANN",
    "PTH",
]

ignore = [
    "E501",
    "ANN101", # Ignore "missing type for self" (too noisy)
    "ANN102", # Ignore "missing type for cls"
]

[tool.pyright]
typeCheckingMode = "basic"